<resources>
    <string name="app_name">Project Mate</string>
    <string name="start_screen_main_text">Find your perfect team to change the world!</string>
    <string name="start_screen_get_started">Get Started</string>
    <string name="start_screen_welcome">Welcome!</string>

    <!--ProfileActivity Strings-->
    <string name="profile_activity_toolbar">Your Profile</string>
    <string name="activity_profile_country">Country</string>
    <string name="activity_profile_city">City</string>
    <string name="activity_profile_organization">Organization</string>
    <string name="activity_profile_projects">Projects</string>
    <string name="activity_profile_skills">Skills</string>
    <string name="activity_profile_full_name">Full Name</string>
    <string name="activity_profile_add_skill">+ Add Skill</string>
    <string name="activity_profile_save">Save</string>
    <string name="activity_profile_add_project">+ Add Project</string>
    <string name="project_activity_save_btn">SAVE</string>

    <!--Add new skill dialog strings-->
    <string name="add_skill_dialog_courses_taken_optional">Courses Taken (Optional)</string>
    <string name="add_skill_dialog_strength">Strength</string>
    <string name="add_skill_dialog_short_description_optional">Short Description (Optional)</string>
    <string name="add_skill_dialog_add_skill">Add Skill</string>
    <string name="add_skill_dialog_name">Name</string>
    <string name="add_skill_dialog_choose">Choose</string>
    <string name="add_skill_dialog_save_and_add_btn">Save and add another</string>
    <string name="add_skill_dialog_invalid_skill_toast">Invalid Skill</string>
    <string name="add_skill_dialog_save_btn">Save</string>
    <string name="add_skill_dialog_cancel_btn">Cancel</string>

    <!--Add new Project dialog strings-->
    <string name="add_project_dialog_short_description_optional">Short Description (Optional)</string>
    <string name="add_project_dialog_complete_description_optional">Complete Description (Optional)</string>
    <string name="add_project_dialog_name">Name</string>
    <string name="add_project_dialog_save_and_add_btn">Save and add another</string>
    <string name="add_project_dialog_save_btn">Save</string>
    <string name="add_project_dialog_cancel_btn">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_home">Home</string>
    <string name="text_profile">Profile</string>
    <string name="text_notification">Activities</string>
    <string name="text_chat">Chat</string>
    <string name="text_project">My Projects</string>
    <string name="skills">Skills</string>
    <string name="description">Description</string>
    <string name="short_description">Short Description</string>


    <!--NOTIFICATION THINGS-->
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="start_chat">START CHAT</string>
    <string name="name_of_project">Name Of Project</string>
    <string name="you_have_received_a_request_for">YOU HAVE RECEIVED A REQUEST FOR</string>
    <string name="your_request_has_been_accepted_for">YOUR REQUEST HAS BEEN ACCEPTED FOR</string>
    <string name="your_request_has_been_rejected_for">YOUR REQUEST HAS BEEN REJECTED FOR</string>

    <!--MY PROJECT ITEM-->
    <string name="name">Name</string>
    <string name="short_desc">Short Desc</string>
    <string name="save">SAVE</string>
    <string name="courses_taken">Courses Taken</string>
    <string name="project_name">Project Name</string>

    <string name="edit">Edit</string>
    <string name="last_message">Last_Message</string>
    <string name="add_project">Add Project</string>
    <string name="add">+ Add</string>
    <string name="name_of_student">Name of Student</string>
    <string name="projects">Projects</string>
    <string name="invite_user">INVITE USER</string>
    <string name="request_to_join">REQUEST TO JOIN</string>
    <string name="editbtn">EditBtn</string>
    <string name="location">Location</string>

</resources>
