<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_project"
        android:enabled="true"
        android:icon="@drawable/baseline_code_24"
        android:title="@string/text_project" />
    <item
        android:id="@+id/action_chat"
        android:enabled="true"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/text_chat"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_notification"
        android:enabled="true"
        android:icon="@drawable/baseline_notifications_24"
        android:title="@string/text_notification" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/text_profile"
        app:showAsAction="ifRoom" />

</menu>